@@ -11,6 +11,7 @@
 * Implemented shortcut handling mechancs by tk::Window.
 * Small bugfix in LedMeterChannel related to header display.
 * Added maximum amplitude property to AudioChannel and AudioSample.
+* Added possibility to draw background around tk::GraphText widget.
 * Updated build scripts.
 
 === 1.0.25 ===
